<resources>
    <string name="app_name">SRS</string>
    <string name="action_settings">Settings</string>

    //lines to be added are below
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="pw_pin">Recovery Pin</string>
    <string name="user_email">User Email</string>
    <string name="forgot">Forgot</string>
    <string name="ok">Ok</string>
    <string name="stock_symbol">stock symbol</string>
    <string name="symbol_hint">Enter a stock symple ie. AAPL or aapl</string>

</resources>